# ccs

./: Makefile  README.md  setup.cfg
ccs/: __init__.py  __main__.py  cli.py  client.py
docs/: conf.py  index.rst
tests/: test_upload.py
