[metadata]
name = ccs
version = attr: ccs.__version__
description =  CloudSigma CLI 
long_description = file: README.md
license = MIT

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False    
include_package_data = True
# start-modules
install_requires =
  click
  cloudsigma

[options.extras_require]
test =  
  pytest
  pytest-click
docs = 
  sphinx
  sphinx-click
  sphinx-rtd-theme
  sphinx-serve

# end-modules

[options.package_data]
* =
  VERSION
  LICENSE

[options.entry_points]
console_scripts = 
  ccs = ccs.cli:ccs
